--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -3,6 +3,10 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  /*overflow: hidden;*/
+}
+* {
+  /*overflow: hidden;*/
 }
 .test {
   color: green;
@@ -19,7 +23,6 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
-
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
