--- a/src/components/gradientPage/index.less
+++ b/src/components/gradientPage/index.less
@@ -1,6 +1,8 @@
 .background-page {
-    transition: all ease-in-out .4s;
+    transition: all ease-in-out .8s;
     //transform:  translate(-50%, -50%);
     transform-origin: center;
+    width: 400vw;
+    height: 500vh;
     z-index: -1;
 }
