--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -6,7 +6,9 @@
   /*overflow: hidden;*/
 }
 * {
-  /*overflow: hidden;*/
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 .test {
   color: green;
