feat: add random stars

--- a/src/components/gradientPage/index.less
+++ b/src/components/gradientPage/index.less
@@ -7,9 +7,9 @@
     left: 0;
     position: absolute;
     .background-page {
-        transition: all ease-in-out .8s;
+        transition: all ease-in-out 1.2s;
         transform-origin: center;
-        width: 400vw;
+        width: 500vw;
         height: 500vh;
         z-index: -1;
     }
