--- a/src/components/gradientPage/index.less
+++ b/src/components/gradientPage/index.less
@@ -7,7 +7,7 @@
     left: 0;
     position: absolute;
     .background-page {
-        transition: all ease-in-out 1.2s;
+        transition: all ease-in-out .8s;
         transform-origin: center;
         width: 500vw;
         height: 500vh;
