--- a/src/components/word/index.less
+++ b/src/components/word/index.less
@@ -14,6 +14,10 @@
   animation: mounting .4s ease-in-out forwards;
   opacity: 0;
 }
+.word-wrap {
+  font-size: 3rem;
+  color: white
+}
 @keyframes unmounting {
   0% {
     opacity: 1;
