--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,10 +5,15 @@
   text-align: center;
   /*overflow: hidden;*/
 }
+@font-face {
+  font-family: 'customFont';
+  src: url("../../assets/zcoolwenyiti Regular.ttf") format("truetype");
+}
 * {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  font-family: 'customFont', sans-serif;
 }
 .test {
   color: green;
