--- a/src/components/Image/index.less
+++ b/src/components/Image/index.less
@@ -1,8 +1,9 @@
 .image-mounting, .image-invisible, .image-unmounting, .image-visible {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  animation: all .4s ease-in-out .4s;
+}
+.inner-image {
+  width: 100%;
+  height: 100%;
 }
 .image-mounting {
   opacity: 0;
@@ -22,20 +23,20 @@
 @keyframes image-mounting {
   0% {
     opacity: 0;
-    transform: translateY(-10vw);
+    margin-bottom: 2vh;
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    margin-bottom: 0;
   }
 }
 @keyframes image-unmounting {
   0% {
     opacity: 1;
-    transform: translateY(0);
+    margin-bottom: 0;
   }
   100% {
     opacity: 0;
-    transform: translateY(-10vw);
+    margin-bottom: 2vh;
   }
 }
