--- a/src/components/word/index.less
+++ b/src/components/word/index.less
@@ -19,20 +19,20 @@
 @keyframes word-unmounting {
   0% {
     opacity: 1;
-    transform: translateY(0);
+    margin-top:(0);
   }
   100% {
     opacity: 0;
-    transform: translateY(-2vh);
+    margin-top:(-2vh);
   }
 }
 @keyframes word-mounting {
   0% {
     opacity: 0;
-    transform: translateY(-1vh);
+    margin-top:(-2vh);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    margin-top: 0;
   }
 }
