--- a/src/pages/entrance/index.less
+++ b/src/pages/entrance/index.less
@@ -6,45 +6,50 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 4vw;
+  font-size: 3vh;
   text-align: center;
 }
 
 .cover-title {
-  top: 8%;
+  top: 4vh;
   font-size: 8vw;
 }
 .cover-sub-title {
   font-size: 6vw;
-  top: 18%;
+  top: 12vh;
   transform: translateX(-48%);
 }
 .producted, .report-title1, .report-title2 {
   position: absolute;
   left: 5vw;
-  bottom: 26vh;
+  bottom: 15vh;
+}
+.producted-img {
+  width: 30vw;
 }
 .report-title1 {
-  bottom: 15vh;
-  font-size: 18vw;
+  bottom: 7vh;
+  font-size: 8vh;
   font-weight: 400;
 }
 .report-title2 {
-  bottom: 10vh;
-  font-size: 12vw;
+  bottom: 3vh;
+  font-size: 5vh;
 }
 .addtion2, .addtion1 {
   width: 100%;
+  font-size: 2vh;
 }
 .addtion1 {
-  top: 54%;
+  top: 50vh;
 }
 .addtion2 {
-  top: 58%;
+  top: 54vh;
 }
 .envelope {
-  top: 30%;
-  width: 70vw;
+  top: 20vh;
+  height: 20vh;
+  width: 60vw;
 }
 
 @keyframes envelope-mounting {
