refactor: refactor the menu of assets

--- a/src/pages/entrance/index.less
+++ b/src/pages/entrance/index.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'xiaowei';
-  src: url("../../assets/xiaowei.ttf") format("truetype");
+  src: url("fonts/xiaowei.ttf") format("truetype");
 }
 .addtion1, .addtion2, .cover-sub-title, .cover-title, .envelope {
   position: absolute;
