--- a/src/components/mvPageButton/index.less
+++ b/src/components/mvPageButton/index.less
@@ -3,6 +3,7 @@
   right: 4vh;
   bottom: 4vh;
   z-index: 2000;
+  //filter: grayscale(100%);
 }
 .mv-page-button-image {
   width: 10vh;
@@ -26,9 +27,7 @@
   opacity: 0;
   display: none;
 }
-//@keyframes  {
-//
-//}
+
 @keyframes mv-page-button-visible {
   0% {
     scale: 0;
