--- a/src/components/Image/index.less
+++ b/src/components/Image/index.less
@@ -1,26 +1,21 @@
-.image-mounting, .image-invisible, .image-unmounting, .image-visible {
-  position: absolute;
-}
 .inner-image {
   width: 100%;
   height: 100%;
 }
-.image-mounting {
+.commonImage-mounting {
   opacity: 0;
 }
-.image-unmounting {
+.commonImage-unmounting {
   opacity: 1;
 }
-.image-visible {
+.commonImage-visible {
   opacity: 1;
-  display: block;
 }
-.image-invisible {
+.commonImage-invisible {
   opacity: 0;
-  display: none;
 }
 
-@keyframes image-mounting {
+@keyframes defaultImage-mounting {
   0% {
     opacity: 0;
     margin-bottom: 2vh;
@@ -30,7 +25,7 @@
     margin-bottom: 0;
   }
 }
-@keyframes image-unmounting {
+@keyframes defaultImage-unmounting {
   0% {
     opacity: 1;
     margin-bottom: 0;
