--- a/src/components/Image/index.less
+++ b/src/components/Image/index.less
@@ -1,4 +1,7 @@
-
+.commonImage-unmounting, .commonImage-mounting, .commonImage-invisible, .commonImage-visible {
+  position: absolute;
+  z-index: 2;
+}
 .inner-image {
   position: relative;
   width: 100%;
@@ -7,19 +10,15 @@
 }
 .commonImage-mounting {
   opacity: 0;
-  z-index: 2;
 }
 .commonImage-unmounting {
   opacity: 1;
-  z-index: 2;
 }
 .commonImage-visible {
   opacity: 1;
-  z-index: 2;
 }
 .commonImage-invisible {
   opacity: 0;
-  z-index: 2;
 }
 
 @keyframes defaultImage-mounting {
