fix: fixed display bugs in mini again, (fuck mini)

--- a/src/pages/electronicBike/index.less
+++ b/src/pages/electronicBike/index.less
@@ -33,6 +33,7 @@
   top: 26%;
   left: 15%;
   font-size: @electronicBikeTextMedium;
+  color: #FDF4BC;
 }
 .electronicBike-word-5 {
   position: absolute;
