fix: fixed display bugs in the fucking fucking mini

--- a/src/pages/dinningHall/index.less
+++ b/src/pages/dinningHall/index.less
@@ -33,7 +33,7 @@
 }
 .dinningHall-text-5 {
   top: 35%;
-  left: 66%;
+  left: 74%;
 }
 .dinningHall-text-6 {
   bottom: 10%;
@@ -41,13 +41,14 @@
 }
 .dinningHall-text-7 {
   bottom: 4%;
-  left: 18%;
+  left: 23%;
 }
 .sticks, .plate {
   position: absolute;
 }
 .sticks {
   left: 2%;
+  width: 20vw;
   height: 22vh;
   bottom: 24vh;
 }
