--- a/src/pages/neverGoDinningHall/index.less
+++ b/src/pages/neverGoDinningHall/index.less
@@ -16,20 +16,20 @@
   transform: translateX(-50%);
 }
 .neverText-3 {
-  bottom: 25vh;
+  bottom: 22vh;
   left: 50%;
   transform: translateX(-50%);
   width: 80vw;
 }
 .neverText-4 {
-  bottom: 18vh;
+  bottom: 15vh;
   left: 5%;
 }
 .never-chart {
-  width: 80vw;
-  height: 80vw;
+  width: 40vh;
+  height: 40vh;
   position: absolute;
-  top: 58vw;
+  top: 20vh;
   left: 50vw;
   transform: translateX(-50%);
 }
