--- a/src/pages/rankCover/index.less
+++ b/src/pages/rankCover/index.less
@@ -4,19 +4,19 @@
     top: 2vh;
     left: -30vw;
 }
-.rankCover-word1{
+.rankCover-OrderedElem1{
     font-size: 6vw;
     position: absolute;
     bottom: 45vh;
     right: 25vw;
 }
-.rankCover-word2{
+.rankCover-OrderedElem2{
     font-size: 6vw;
     position: absolute;
     bottom: 35vh;
     right: 20vw;
 }
-.rankCover-word3{
+.rankCover-OrderedElem3{
     font-size: 6vw;
     position: absolute;
     bottom: 25vh;
