--- a/src/pages/schoolTime/index.less
+++ b/src/pages/schoolTime/index.less
@@ -4,26 +4,26 @@
     width: 80vw;
     left: 10vw;
 }
-.datePage-word-1{
+.datePage-OrderedElem-1{
     font-size: 8vw;
     position: absolute;
     top: 5vh;
     right: 10vw;
 }
-.datePage-word-2{
+.datePage-OrderedElem-2{
     font-size: 8vw;
     position: absolute;
     top: 13vh;
     left: 10vw;
 }
-.datePage-word-3{
+.datePage-OrderedElem-3{
     font-size: 8vw;
     position: absolute;
     bottom: 30vh;
     left: 10vw;
     
 }
-.datePage-word-4{
+.datePage-OrderedElem-4{
     font-size: 8vw;
     position: absolute;
     right: 10vw;
