--- a/src/pages/eat-card/index.less
+++ b/src/pages/eat-card/index.less
@@ -4,38 +4,38 @@
     top: 23vh;
     left: 10vw;
 }
-.card-word-1{
+.card-OrderedElem-1{
     position: absolute;
     top: 7vh;
     left: 13vw;
     font-size: 7vw;
 }
-.card-word-2{
+.card-OrderedElem-2{
     position: absolute;
     top: 14vh;
     left: 13vw;
     font-size: 7vw;
 }
-.card-word-3{
+.card-OrderedElem-3{
     position: absolute;
     top: 22vh;
     left: 13vw;
     font-size: 7vw;
     color: #FFF781;
 }
-.card-word-4{
+.card-OrderedElem-4{
     position: absolute;
     bottom: 21vh;
     left: 9vw;
     font-size: 7vw;
 }
-.card-word-5{
+.card-OrderedElem-5{
     position: absolute;
     bottom:17vh;
     left: 9vw;
     font-size: 7vw;
 }
-.card-word-6{
+.card-OrderedElem-6{
     position: absolute;
     bottom:10vh;
     left: 19vw;
