--- a/src/pages/study/index.less
+++ b/src/pages/study/index.less
@@ -1,28 +1,28 @@
-.study-word-1{
+.study-OrderedElem-1{
     position: absolute;
     font-size: 7vw;
     left: 7vw;
     top: 4vh;
 }
-.study-word-2{
+.study-OrderedElem-2{
     position: absolute;
     font-size: 7vw;
     left: 7vw;
     top: 11vh;
 }
-.study-word-3{
+.study-OrderedElem-3{
     position: absolute;
     font-size: 7vw;
     left: 7vw;
     top: 17vh;
 }
-.study-word-4{
+.study-OrderedElem-4{
     position: absolute;
     font-size: 7vw;
     left: 7vw;
     bottom: 24vh;
 }
-.study-word-5{
+.study-OrderedElem-5{
     position: absolute;
     font-size: 7vw;
     left: 14vw;
