--- a/src/pages/eat-card/index.less
+++ b/src/pages/eat-card/index.less
@@ -2,7 +2,7 @@
     position: absolute;
     width: 70vw;
     top: 23vh;
-    left: 15vw;
+    left: 21vw;
 }
 .card-word-1{
     position: absolute;
@@ -25,19 +25,25 @@
 }
 .card-word-4{
     position: absolute;
-    bottom: 25vh;
+    bottom: 28vh;
     left: 9vw;
     font-size: 7vw;
 }
 .card-word-5{
     position: absolute;
-    bottom:19vh;
+    bottom:22vh;
     left: 15vw;
     font-size: 7vw;
 }
 .card-word-6{
+  position: absolute;
+  bottom:16vh;
+  left: 25vw;
+  font-size: 7vw;
+}
+.card-word-7{
     position: absolute;
-    bottom:14vh;
+    bottom:11vh;
     left: 9vw;
     font-size: 7vw;
     color: #FFF781;
