--- a/src/pages/electronicBike/index.less
+++ b/src/pages/electronicBike/index.less
@@ -15,34 +15,34 @@
   bottom: -18vh;
   left: -20vw;
 }
-.electronicBike-word-1, .electronicBike-word-2, .electronicBike-word-3 {
+.electronicBike-OrderedElem-1, .electronicBike-OrderedElem-2, .electronicBike-OrderedElem-3 {
   font-size: @electronicBikeTextMedium;
   position: absolute;
   left: 10%;
 }
-.electronicBike-word-1 {
+.electronicBike-OrderedElem-1 {
   top: 5%;
 }
-.electronicBike-word-2 {
+.electronicBike-OrderedElem-2 {
   top: 12%;
 }
-.electronicBike-word-3 {
+.electronicBike-OrderedElem-3 {
   top: 19%;
 }
-.electronicBike-word-4 {
+.electronicBike-OrderedElem-4 {
   position: absolute;
   top: 26%;
   left: 15%;
   font-size: @electronicBikeTextMedium;
   color: @highlightTextColor;
 }
-.electronicBike-word-5 {
+.electronicBike-OrderedElem-5 {
   position: absolute;
   top: 33%;
   left: 20%;
   font-size: @electronicBikeTextMedium;
 }
-.electronicBike-word-6 {
+.electronicBike-OrderedElem-6 {
   position: absolute;
   top: 45%;
   left: 30%;
