fix: 名字输入样式修改

--- a/src/pages/nameInput/index.less
+++ b/src/pages/nameInput/index.less
@@ -12,7 +12,7 @@
 }
 .name-ask{
     position: absolute;
-    top: 50vh;
+    bottom: 40vh;
     font-size: 5vw;
     padding-left: 30vw;
 }
@@ -21,7 +21,7 @@
     bottom: 35vh;
     right: 17vw;
     width: 60vw;
-    min-height: 3vh+1%;
+    min-height: 3vh;
     padding: 0 3vw 0 3vw;
     font-size: 4vw;
     z-index: 3;
