fix: fixed font bugs

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,6 +5,7 @@
   padding: 2rem;
   text-align: center;
   overflow: hidden;
+  font-family: 'Coca-Cola', sans-serif;
 }
 @font-face {
   font-family: 'customFont';
