fix: fixed display bugs

--- a/src/pages/rank/index.less
+++ b/src/pages/rank/index.less
@@ -90,9 +90,9 @@
 .rank-content-word-3{
   animation: breath 2s linear infinite;
 }
-.rank-box, .rank-title-box, .rank-title, .rank-content{
-  animation: box-ani 2s linear infinite;
-}
+//.rank-box, .rank-title-box, .rank-title, .rank-content{
+//  animation: box-ani 2s linear infinite;
+//}
 //.rank-content-word-1{
 //  animation: breath 2s linear infinite;
 //}
